--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,10 @@
+
 <div class="login-container">
   <h2>Iniciar sesión</h2>
   <form (ngSubmit)="onSubmit()">
     <div>
-      <label for="username">Usuario:</label>
-      <input type="text" id="username" [(ngModel)]="username" name="username" required>
+      <label for="email">Correo electrónico:</label>
+      <input type="email" id="email" [(ngModel)]="email" name="email" required>
     </div>
     <div>
       <label for="password">Contraseña:</label>
